Style MainActivity and add event click

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,21 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/linear_menu"
         android:layout_width="match_parent"
-        android:padding="8dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:background="@color/purple"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
             android:src="@drawable/ic_all_inclusive"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            app:tint="@color/white" />
         <ImageView
             android:src="@drawable/ic_sunny"
             android:layout_weight="1"
@@ -28,6 +34,16 @@
             android:layout_width="0dp"
             android:layout_height="40dp" />
     </LinearLayout>
+    <TextView
+        android:text="Hi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:layout_below="@id/linear_menu"
+        android:layout_width="wrap_content"
+        android:fontFamily="@font/cambo"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/text_phrase"
@@ -36,20 +52,27 @@
         android:padding="16dp"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:text="Motivation"/>
+        android:fontFamily="@font/cambo"
+        android:textSize="22sp"
+        android:textColor="@color/black"
+        android:text="@string/app_name"/>
 
     <View
         android:layout_width="128dp"
-        android:layout_height="5dp"
+        android:layout_height="3dp"
+        android:elevation="5dp"
         android:layout_centerHorizontal="true"
-        android:background="@color/black"
+        android:background="@color/dark_purple"
         android:layout_below="@+id/text_phrase"/>
 
     <Button
+        android:id="@+id/button_new_phrase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Phase"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="32dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
+        android:fontFamily="@font/cambo"
+        android:backgroundTint="@color/dark_purple"
+        android:text="@string/new_phrase" />
 </RelativeLayout>
