--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/image_all"
             android:src="@drawable/ic_all_inclusive"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            app:tint="@color/white" />
-        <ImageView
-            android:src="@drawable/ic_sunny"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="40dp" />
         <ImageView
+            android:id="@+id/image_happy"
             android:src="@drawable/ic_emoji_emotions"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="40dp" />
+        <ImageView
+            android:id="@+id/image_sunny"
+            android:src="@drawable/ic_sunny"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="40dp" />
